fixed alignment of search box and button

--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -490,7 +490,6 @@ footer {
         .input-group {
             .form-control {
                 padding: 6px 25px 6px 12px;
-                float: none;
             }
             .form-control-feedback {
                 top: 0;
